🐛 fix bug url overflow

--- a/sass/helpers/_resets.scss
+++ b/sass/helpers/_resets.scss
@@ -44,6 +44,7 @@ button {
 
 a {
   font-family: $font-body;
+  word-break: break-word;
 }
 
 button {
